Fix overlapped unrounded corner

--- a/OBS-local-server/content/scss/setup.scss
+++ b/OBS-local-server/content/scss/setup.scss
@@ -171,6 +171,14 @@ body {
     box-shadow: -7px 9px 18px -8px rgba(168, 168, 168, 0.37) inset;
     -webkit-box-shadow: -7px 9px 18px -8px rgba(168, 168, 168, 0.37) inset;
     -moz-box-shadow: -7px 9px 18px -8px rgba(168, 168, 168, 0.37) inset;    
+    border-radius: 4px 0px 0px 4px;
+    & > hr {
+        width: 94%;
+        padding-top: 0px;
+        margin-top: 0px;
+        margin-left: auto;
+        margin-right: auto;
+    }
     &::before {
         content: "";
         background-color: $hr-gradient-inner;
@@ -184,6 +192,8 @@ body {
     }
     & > :nth-child(1) {
         padding-top: 15px;
+        margin-bottom: 10px;
+        
     }
     & > * {
         margin-left: 20px;
